--- a/Farmerchess/Farmerchess/MainWindow.xaml
+++ b/Farmerchess/Farmerchess/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Farmerchess"
         mc:Ignorable="d"
         MouseLeftButtonDown="Window_MouseLeftButtonDown"
+        MouseRightButtonDown="Window_MouseRightButtonDown"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
         
